--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -8,8 +8,8 @@
     <ul>
       {{#each customers}}
       <li>
-        <strong>Name:</strong> {{this.name}}<br>
-        <strong>Email:</strong> {{this.email}}
+        <strong>ID:</strong> {{this.id}}<br>
+        <strong>Account Number:</strong> {{this.accountnum}}
       </li>
       {{/each}}
     </ul>
