--- a/views/customers.hbs
+++ b/views/customers.hbs
@@ -9,7 +9,8 @@
       {{#each customers}}
       <li>
         <strong>ID:</strong> {{this.id}}<br>
-        <strong>Account Number:</strong> {{this.accountnum}}
+        <strong>Account Number:</strong> {{this.accountnum}}<br>
+        <strong>Name: </strong>{{this.name}}<br>
       </li>
       {{/each}}
     </ul>
