--- a/views/newcustomer.hbs
+++ b/views/newcustomer.hbs
@@ -27,13 +27,17 @@
           <input type="text" class="form-control" id="gender" name="gender">
         </div>
         <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input type="password" class="form-control" id="password" name="password">
+        </div>
+        <div class="mb-3">
           <label for="featureImage" class="form-label">Feature Image</label>
           <input type="file" class="form-control" id="featureImage" name="featureImage">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
   </form>
   <button style="background-color: blue; color: white; padding: 10px 20px;"><a href="/newcustomer" style="text-decoration: none; color: white;">Sign Up</a></button>
-<button style="background-color: green; color: white; padding: 10px 20px;"><a href="/login" style="text-decoration: none; color: white;">Log In</a></button>
+  <button style="background-color: green; color: white; padding: 10px 20px;"><a href="/login" style="text-decoration: none; color: white;">Log In</a></button>
 
 </body>
 </html>
