--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,7 +22,7 @@
                 <a href="/" class="navbar__links">Home</a>
             </li>
             <li class="navbar__item">
-                <a href="/tech.html" class="navbar__links">About</a>
+                <a href="/about" class="navbar__links">About</a>
             </li>
             <li class="navbar__item">
                 <a href="/timhortons" class="navbar__links">Tim Hortons</a>
@@ -40,7 +40,9 @@
         <h1>NEXT GENERATION</h1>
         <h2>BANK</h2>
         <p>Get the 20% discount on your school fees</p>
-        <button class="main__btn"><a href="/">Get Started</a></button>
+<!-- Remove the anchor tag and keep only the button -->
+<button class="main__btn">Get Started</button>
+
       </div>
       <div class="main__img--container">
         <img src="/images/bank.jpg" alt="pic" class="main__img">
@@ -125,5 +127,6 @@
   </div>
 
   <script src="/app.js"></script>
+  <script src="/client_script.js"></script>
 </body>
 </html>
