--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -2,10 +2,34 @@
 <html>
 <head>
   <title>Dashboard</title>
-  
+    <nav class="navbar">
+    <div class="navbar__container">
+        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i> MONEY BANK </a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">Home</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/about" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/timhortons" class="navbar__links">Tim Hortons</a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/newcustomer" class="button">Login/Sign Up</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
 </head>
 <body>
   <h1>Welcome to Your Dashboard</h1>
+
 
   <div class="functionality-section">
     <h2>Delete Account</h2>
