--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,6 +7,34 @@
   <link rel="stylesheet" href="/login.css">
 </head>
 <body>
+  <nav class="navbar">
+    <div class="navbar__container">
+        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i> MONEY BANK </a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">Home</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/about" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/timhortons" class="navbar__links">Tim Hortons</a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/newcustomer" class="button">Login/Sign Up</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+
+
+
+
   <div class="container">
     <h1>Login</h1>
     <form action="/login" method="POST">
