--- a/views/newcustomer.hbs
+++ b/views/newcustomer.hbs
@@ -7,8 +7,36 @@
     <title>NEW Registration</title>
     <link rel="stylesheet" href="/newcustomer.css">
 </head>
+
 <h1>New Registration</h1>
 <body>
+  <nav class="navbar">
+    <div class="navbar__container">
+        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i> MONEY BANK </a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">Home</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/about" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/timhortons" class="navbar__links">Tim Hortons</a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/newcustomer" class="button">Login/Sign Up</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+
+
+
   <form action="/newcustomer" method="POST" enctype="multipart/form-data">
         <div class="mb-3">
           <label for="name" class="form-label">Name</label>
