--- a/views/timhortons.hbs
+++ b/views/timhortons.hbs
@@ -6,11 +6,29 @@
 </head>
 <body>
   <h1>Tim Hortons</h1>
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-    </ul>
+    <nav class="navbar">
+    <div class="navbar__container">
+        <a href="/" id="navbar__logo"><i class="fas fa-gem"></i> MONEY BANK </a>
+        <div class="navbar__toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+            <li class="navbar__item">
+                <a href="/" class="navbar__links">Home</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/about" class="navbar__links">About</a>
+            </li>
+            <li class="navbar__item">
+                <a href="/timhortons" class="navbar__links">Tim Hortons</a>
+            </li>
+            <li class="navbar__btn">
+                <a href="/newcustomer" class="button">Login/Sign Up</a>
+            </li>
+        </ul>
+    </div>
   </nav>
 
   <h2>Hot Beverages</h2>
@@ -50,23 +68,19 @@
   </div>
 
 
-<!-- Cart Section -->
-  <div id="cart-container">
-    <h2>Cart</h2>
-    {{#each cartItems}}
-    <div class="cart-item">
-      <p>{{name}} - Price: {{price}}</p>
-    </div>
-    {{/each}}
-  </div>
+ <!-- Cart Section -->
+  <div id="cart-container" style="display: none;">
+  <span class="close-button">&times;</span>
+  <h2>Cart</h2>
 
-<div id="total-container">
-  <!-- Total price will be displayed here -->
-</div>
-  <!-- Order Button -->
+   <div class="cart-items-container">
   
+  </div>
+  <div>
   <button id="pay-now-button">Pay Now</button>
-
+</div>
+<div id="total-container"></div>
+</div>
 
   <!-- Include Handlebars library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
