--- a/views/about.hbs
+++ b/views/about.hbs
@@ -70,8 +70,44 @@
     </div>
   </section>
 
-  <footer>
-    <p>Contact me at: akash.yadav@example.com</p>
-  </footer>
+ <footer>
+  <div class="footer__container">
+    <div class="footer__links">
+      <div class="footer__link--wrapper">
+        <div class="footer__link--items">
+          <h2>Connect</h2>
+          <!-- Your social media links -->
+          <a href="https://www.instagram.com/your_username">Instagram</a>
+          <a href="https://www.linkedin.com/in/your_username">LinkedIn</a>
+          <a href="https://www.facebook.com/your_username">Facebook</a>
+        </div>
+      </div>
+      <div class="footer__link--wrapper">
+        <div class="footer__link--items">
+          <h2>Contact</h2>
+          <!-- Your contact information -->
+          <p>Email: yadavakki440@gmail.com</p>
+          <p>Mobile: +1 4379844182</p>
+        </div>
+      </div>
+    </div>
+    <div class="social__media">
+      <div class="social__media--wrap">
+        <!-- Add your social media icons here -->
+        <a href="#" class="social__icon--link" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="social__icon--link" target="_blank">
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="#" class="social__icon--link" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
+
+
 </body>
 </html>
