--- a/views/newcustomer.hbs
+++ b/views/newcustomer.hbs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/newcustomer.css">
 </head>
 
-<h1>New Registration</h1>
+
 <body>
   <nav class="navbar">
     <div class="navbar__container">
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-
+<h1>Registration</h1>
 
   <form action="/newcustomer" method="POST" enctype="multipart/form-data">
         <div class="mb-3">
