--- a/public/newcustomer.css
+++ b/public/newcustomer.css
@@ -1,6 +1,6 @@
 /* Apply a dark background */
 body {
-    background-color: #333;
+    background-image: url('./images/newcustomer.avif');
     color: #fff;
   }
   
@@ -8,6 +8,7 @@ body {
   h1 {
     text-align: center;
     margin-top: 50px;
+    color:red;
   }
   
   /* Apply some spacing and styling to form elements */
@@ -55,4 +56,222 @@ body {
   
   /* Customize form elements to match the theme */
   /* Add your custom styles here */
+  .navbar {
+    background-color: black;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+.navbar__container {
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    .navbar__menu {
+      display:flex;
+      align-items: center;
+      list-style: none;
+      text-align: center;
+  }
   
+  .navbar__item {
+      height: 80px;
+  }
+  
+  .navbar__links {
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      padding: 0 1rem;
+      height: 100%;
+  }
+  
+  .navbar__btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0 1rem;
+      width: 100%;
+  }
+  
+  .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-decoration: none;
+      padding: 10px 20px;
+      height: 100%;
+      width: 100%;
+      border: none;
+      outline: none;
+      border-radius: 4px;
+      background: #f77062;
+      color: #fff;
+  }
+  
+  .button:hover {
+      background: blue;
+      transition: all 0.3s ease;
+  }
+  
+  .navbar__links:hover {
+      color: #f77062;
+      transition: all 0.3s ease;
+  }
+  
+  #navbar__logo{
+    padding-top: 20px;
+    
+  }
+
+  @media screen and (max-width: 960px) {
+      .navbar__container {
+          display: flex;
+          justify-content: space-between;
+          height: 80px;
+          z-index: 1;
+          width: 100%;
+          max-width: 1300px;
+          padding: 0;
+      }
+  
+      .navbar__menu {
+          display: grid;
+          grid-template-columns: auto;
+          margin: 0;
+          width: 100%;
+          position: absolute;
+          top: -1000px;
+          opacity: 0;
+          transition: all 0.5s ease;
+          height: 50vh;
+          z-index: -1;
+          background: #131313;
+      }
+  
+      .navbar__menu.active {
+          background: #131313;
+          top: 100%;
+          opacity: 1;
+          transition: all 0.5s ease;
+          z-index: 99;
+          height: 50vh;
+          font-size: 1.6rem;
+      }
+  
+      #navbar__logo {
+          padding-left: 25px;
+          padding-top: 20px;
+      }
+  
+      .navbar__toggle .bar {
+          width: 25px;
+          height: 3px;
+          margin: 5px auto;
+          transition: all 0.3s ease-in-out;
+          background: #fff;
+      }
+  
+      .navbar__item {
+          width: 100%;
+      }
+  
+      .navbar__links {
+          text-align: center;
+          padding: 2rem;
+          width: 100%;
+          display: table;
+      }
+  
+      #mobile-menu {
+          position: absolute;
+          top: 20%;
+          right: 5%;
+          transform: translate(5%, 20%);
+      }
+  
+      .navbar__btn {
+          padding-bottom: 2rem;
+      }
+  
+      .button {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 80%;
+          height: 80px;
+          margin: 0;
+      }
+  
+      .navbar__toggle .bar {
+          display: block;
+          cursor: pointer;
+      }
+  
+      #mobile-menu.is-active .bar:nth-child(2) {
+          opacity: 0;
+      }
+  
+      #mobile-menu.is-active .bar:nth-child(1) {
+          transform: translateY(8px) rotate(45deg);
+      }
+  
+      #mobile-menu.is-active .bar:nth-child(3) {
+          transform: translateY(-8px) rotate(-45deg);
+      }
+  } 
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+
+#mobile-menu {
+  display: none;
+}
+
+/* Add responsive styles */
+@media (max-width: 768px) {
+  .navbar__toggle {
+    display: block;
+  }
+
+  .navbar__menu {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: #007bff;
+    width: 100%;
+  }
+
+  .navbar__menu.active {
+    display: flex;
+  }
+
+  .navbar__item {
+    margin: 10px;
+    text-align: center;
+  }
+
+  .navbar__btn {
+    display: flex;
+    justify-content: center;
+  }
+
+  .navbar__links {
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
+  }
+}
