--- a/views/about.hbs
+++ b/views/about.hbs
@@ -35,6 +35,9 @@
     </div>
   </nav>
   </header>
+  <div class="image-section">
+      <img src="/images/akash.jpg" alt="image">
+    </div>
   <section id="intro-section">
     <div class="container">
       <h2>Introduction</h2>
