--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -44,7 +44,7 @@
       <h2>Delete Account</h2>
      <form action="/delete" method="post">
       <label for="accountnum">Account Number:</label>
-      <input type="text" id="accountnum" name="accountnum" required>
+      <input type="text" id="accountnum" name="accountnum" required><br>
       <button type="submit">Delete Account</button>
     </form>
     </div>
