--- a/public/tim.css
+++ b/public/tim.css
@@ -114,7 +114,46 @@ nav li {
 
 .cart-item {
   /* Add animation for new cart items */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  border-bottom: 1px solid #333;
   animation: fadeInUp 0.3s ease;
+}
+
+.cart-item:last-child {
+  border-bottom: none; /* Remove bottom border for the last item */
+}
+
+.quantity-button {
+  font-size: 16px;
+  padding: 2px 8px;
+  background-color: #f77062;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.quantity-button:hover {
+  background-color: #ff4d4d;
+}
+
+.remove-button {
+  font-size: 16px;
+  padding: 2px 8px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.remove-button:hover {
+  background-color: #777;
 }
 
 @keyframes slideInRight {
