--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -24,6 +24,9 @@
             <li class="navbar__btn">
                 <a href="/newcustomer" class="button">Login/Sign Up</a>
             </li>
+            <li class="navbar__btn">
+                <a href="/Logout" class="button">Logout</a>
+            </li>
         </ul>
     </div>
   </nav>
