--- a/views/timhortons.hbs
+++ b/views/timhortons.hbs
@@ -73,18 +73,18 @@
   <span class="close-button">&times;</span>
   <h2>Cart</h2>
 
-   <div class="cart-items-container">
-  
-  </div>
-  <div>
-  <button id="pay-now-button">Pay Now</button>
-</div>
+   <div class="cart-items-container"></div>
+  <div><button id="pay-now-button">Pay Now</button></div>
 <div id="total-container"></div>
 </div>
 
+
+
+
+
   <!-- Include Handlebars library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.min.js"></script>
-  <script src="/scripts.js"></script>
   <script src="/client_script.js"></script>
+  <script src="/scripts.js"></script>
 </body>
 </html>
